--- a/spotify/src/index.css
+++ b/spotify/src/index.css
@@ -68,7 +68,7 @@ body {
 /* ✅ Song List */
 .songList {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   gap: 20px;
   width: 100%;
