--- a/spotify/src/App.css
+++ b/spotify/src/App.css
@@ -18,6 +18,7 @@
 .navbar-list {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   list-style: none;
   padding: 0;
 }
