--- a/spotify/src/index.css
+++ b/spotify/src/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 /* ✅ Navbar */
-.g1 {
+.navbar-list {
   display: flex;
   align-items: center;
   list-style-type: none;
@@ -20,7 +20,7 @@ body {
   justify-content: space-between;
 }
 
-.g1 li {
+.navbar-list li {
   padding: 0 12px;
   cursor: pointer;
   transition: color 0.3s;
