--- a/spotify/src/index.css
+++ b/spotify/src/index.css
@@ -15,7 +15,8 @@ body {
   align-items: center;
   list-style-type: none;
   height: 70px;
-  background-color: black;
+  width:100%;
+/*   background-color: black; */
   padding: 0 20px;
   justify-content: space-between;
 }
